# secureexec-agent

./: .gitignore  Cargo.toml  LICENSE  Makefile  NOTICE  README.md
.github/workflows/: build-linux-agent.yml
docker/: agent-files.Dockerfile  linux-agent-builder.Dockerfile
generic/: Cargo.toml  build.rs
generic/src/: command.rs  config.rs  detection.rs  error.rs  filter.rs  lib.rs  log_sender.rs  log_spool.rs  pipeline.rs  process_table.rs  sensor.rs  shutdown.rs  spool.rs  telemetry.rs  transport.rs  update.rs
generic/src/event/: file.rs  misc.rs  mod.rs  network.rs  process.rs  security.rs
linux/agent/: Cargo.toml  build.rs
linux/agent/src/: command_handler.rs  constants.rs  detached_script.rs  ebpf_firewall.rs  firewall.rs  kmod.rs  log_tailer.rs  main.rs  update.rs
linux/agent/src/sensors/: auth.rs  exe_hash.rs  fanotify.rs  mod.rs  procfs.rs  snapshot.rs
linux/agent/src/sensors/ebpf/: convert.rs  helpers.rs  loader.rs  mod.rs  parsers.rs  sensor.rs  types.rs
linux/ebpf/: Cargo.toml
linux/ebpf-common/: Cargo.toml
linux/ebpf-common/src/: lib.rs
linux/ebpf/src/: file.rs  firewall.rs  lib.rs  main.rs  network.rs  process.rs  security.rs
linux/kmod/: Makefile  compat.h  dkms.conf  firewall.c  firewall.h  main.c
macos/activator/: Info.plist
macos/activator/Sources/: main.swift
macos/agent/: Cargo.toml  co.secureexec.agent.plist.in  secureexec-macos.entitlements
macos/agent/src/: main.rs
macos/agent/src/ffi/: libproc.rs
macos/agent/src/sensors/: mod.rs  network.rs
macos/agent/src/sensors/es/: client.rs  convert.rs  helpers.rs  mod.rs
macos/app/: Info.plist  Package.swift  secureexec-app.entitlements
macos/app/Sources/: main.swift
macos/network-ext/: Info.plist  secureexec-network-ext.entitlements
macos/network-ext/Sources/: FilterDataProvider.swift
proto/: secureexec.proto
windows/agent/: Cargo.toml
windows/agent/src/: main.rs
windows/agent/src/sensors/: file.rs  mod.rs  network.rs  process.rs  registry.rs
