[workspace]
members = [
    "generic",
    "macos/agent",
    "linux/agent",
    "linux/ebpf-common",
    "windows/agent",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
secureexec-generic = { path = "generic" }
secureexec-ebpf-common = { path = "linux/ebpf-common", features = ["user"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
hostname = "0.4"
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
tokio-stream = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
libc = "0.2"
aya = { version = "0.13", default-features = false }
aya-log = { version = "0.2", default-features = false }
lru = "0.12"
