[package]
name = "secureexec-generic"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true
tonic.workspace = true
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
prost.workspace = true
rusqlite.workspace = true
hostname.workspace = true
sha1.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true

[build-dependencies]
tonic-build = "0.12"
