[package]
name = "secureexec-windows"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "secureexec-agent-windows"
path = "src/main.rs"

[dependencies]
secureexec-generic.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
hostname.workspace = true
